# fs-template

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  __init__.py  alembic.ini  docker-compose.yaml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 20260215_0001_create_users.py
scripts/: db_reset.sh  db_seed.sh
src/: config.py
src/api/: Dockerfile  main.py  requirements.txt
src/db/: client.py  database.py  models.py  queries.py
src/nginx/: nginx.conf
src/ui/: Dockerfile  package-lock.json
src/ui/src/: App.jsx  api.js
src/ui/src/components/: Header.jsx  Home.jsx  Login.jsx
src/ui/src/hooks/: index.js
src/ui/src/styles/: index.css  page.css
src/ui/src/utils/: index.js
tests/: notest_db.py  test_api.py
